.tanzu/config/k8sGatewayRoutes.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: tanzu-oyo-route
  annotations:
    healthcheck.gslb.tanzu.vmware.com/service: tanzu-oyo
    healthcheck.gslb.tanzu.vmware.com/path: /actuator/health
    healthcheck.gslb.tanzu.vmware.com/port: "8080"
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: default-gateway
    sectionName: http-tanzu-oyo #use https for TLS
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: tanzu-oyo
      port: 8080
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
